# OpenGL

./: .clang-format  .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
include/: camera.h  cube.h  pch.h
src/: callback.c  cube.c  main.c  render.c  shader.c
